--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,16 +3,25 @@ plugins {
 }
 
 android {
-    compileSdk 32
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.rain_check"
-        minSdk 28
-        targetSdk 32
+        minSdk 30
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        Properties properties = new Properties()
+        properties.load(project.rootProject.file("local.properties").newDataInputStream())
+        buildConfigField "String", "ACCUWEATHER_API_KEY", "\"${properties.getProperty("ACCUWEATHER_API_KEY")}\""
+        buildConfigField "String", "MAPBOX_API_KEY", "\"${properties.getProperty("MAPBOX_API_KEY")}\""
+        buildConfigField "String", "DATA_API_KEY", "\"${properties.getProperty("DATA_API_KEY")}\""
+        buildConfigField "String", "DATA_API_ID", "\"${properties.getProperty("DATA_API_ID")}\""
+        buildConfigField "String", "ADMIN_USERNAME", "\"${properties.getProperty("ADMIN_USERNAME")}\""
+        buildConfigField "String", "ADMIN_PASSWORD", "\"${properties.getProperty("ADMIN_PASSWORD")}\""
     }
 
     buildTypes {
@@ -22,21 +31,22 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
+    namespace 'com.example.rain_check'
 }
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.android.volley:volley:1.2.0'
-    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
-    implementation 'com.google.android.gms:play-services-location:18.0.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation 'com.squareup.okhttp3:okhttp:4.12.0'
+    implementation 'com.google.android.gms:play-services-location:21.2.0'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.android.volley:volley:1.2.1'
 }
