--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.rain_check">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -16,7 +15,7 @@
         android:usesCleartextTraffic="true">
         <activity
             android:name=".AdminPage"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".LauncherActivity"
             android:exported="true">
@@ -31,7 +30,7 @@
             android:exported="true" />
         <activity
             android:name=".SelectCity"
-            android:exported="true"></activity>
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
